@@ -461,6 +461,7 @@ a {
  * It has the same width as the cell, not the thumbnail.
  */
 .g-va-thumb-texts {
+margin-top: 2px;
 }
 
 .g-thumb-caption {
@@ -789,4 +790,13 @@ input:focus, textarea:focus, select:focus {
 
 .g-cropImageBox {
  	border: 1px dashed silver;
+}
+
+.g-tooltip {
+	font-family: arial,helvetica,sans-serif;
+	font-size: 11px;
+	padding: 2px;
+	background: #eee;
+    border: 1px solid #ccc;
+    -moz-border-radius: 5px;
 }
