@@ -1,3 +1,12 @@
+2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b37
+
+ * Change: Use nice YUI tooltips in album view.
+
+   - Adjust css classname to g-tooltip in js/yui/container-min.js
+   - Added new css class in css/screen.css.default
+   - Modified method Album::getThumbnailTag
+   -- If not given, add a HTML id
+   
 2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b36
 
  * Change: Update js/wz_tooltip.js to Version 3.45
